Creating and styling a modal

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,6 +1,8 @@
 <div class="title">
   <h3>Users</h3>
-  <button type="button" class="btn">Add User</button>
+  <button type="button" class="btn" (click)="openModal($event)">
+    Add User
+  </button>
 </div>
 
 <table>
