--- a/src/scss/elements/_buttons.scss
+++ b/src/scss/elements/_buttons.scss
@@ -13,6 +13,9 @@
     @include box-shadow(0 7px 14px rgba(50, 50, 93, 0.1));
     @include transform(translateY(-1px));
   }
+  &:disabled {
+    opacity: 0.5;
+  }
 }
 
 .edit-btn {
